--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "info": "shopify app info"
   },
   "dependencies": {
-    "react-icons": "^5.3.0"
+    "axios": "^1.7.7",
+    "react-icons": "^5.3.0",
+    "react-pay-icons": "^3.1.1"
   },
   "author": "ArpitPatel",
   "private": true,
