--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "info": "shopify app info"
   },
   "dependencies": {
+    "@flaticon/flaticon-uicons": "^3.3.1",
     "axios": "^1.7.7",
     "react-icons": "^5.3.0",
-    "react-pay-icons": "^3.1.1"
+    "react-pay-icons": "^3.1.1",
+    "react-router-dom": "^6.27.0",
+    "semantic-ui-react": "^2.1.5"
   },
   "author": "ArpitPatel",
   "private": true,
