--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "info": "shopify app info"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.1.0",
     "@flaticon/flaticon-uicons": "^3.3.1",
     "axios": "^1.7.7",
+    "react-beautiful-dnd": "^13.1.1",
     "react-icons": "^5.3.0",
     "react-pay-icons": "^3.1.1",
     "react-router-dom": "^6.27.0",
